// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Skeleton Button ⚠️ 1`] = `
<div
  aria-hidden={true}
  className="sc-jqCOkK bewvbk"
  width={139}
>
  _
</div>
`;

exports[`Storyshots Skeleton Rect 1`] = `
<div
  aria-hidden={true}
  className="sc-uJMKN jLArhS"
  height="600px"
  width="800px"
>
  _
</div>
`;

exports[`Storyshots Skeleton Text 1`] = `
Array [
  <div
    aria-hidden={true}
    className="sc-dNLxif jNmqDU"
  >
    _
  </div>,
  <br />,
  <div
    aria-hidden={true}
    className="sc-dNLxif jNmqDU"
  >
    _
  </div>,
  <br />,
  <div
    aria-hidden={true}
    className="sc-dNLxif jNmqDU"
  >
    _
  </div>,
]
`;
